[gd_scene load_steps=19 format=3 uid="uid://cdvrglje17dnq"]

[ext_resource type="Script" path="res://settings/settings.gd" id="1_455bt"]
[ext_resource type="Texture2D" uid="uid://dv0s8x4urndpm" path="res://assets/background.png" id="1_bt241"]
[ext_resource type="FontFile" uid="uid://52kqfxtygux6" path="res://assets/upheavtt.ttf" id="2_g8gjm"]
[ext_resource type="Texture2D" uid="uid://04bvrsorpfs2" path="res://assets/cross.png" id="4_qttmc"]
[ext_resource type="Script" path="res://settings/slider.gd" id="4_tjlsm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jsg11"]
texture = ExtResource("1_bt241")
modulate_color = Color(0.635294, 0.635294, 0.635294, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aavm6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_su5yy"]
content_margin_top = 5.0

[sub_resource type="SystemFont" id="SystemFont_j8ufm"]
subpixel_positioning = 0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fcswg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imm1h"]
bg_color = Color(1, 1, 1, 0.223529)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.184314)
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aeagg"]
bg_color = Color(1, 1, 1, 0.509804)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.184314)
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ctcbg"]
content_margin_top = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d377r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ve1rr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0oc8r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iyqck"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g5qof"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_455bt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jsg11")
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -17.0
offset_right = 162.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 98
theme_override_constants/v_separation = 20
columns = 2

[node name="Label" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_g8gjm")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_aavm6")
text = "Game Volume"

[node name="Slider" type="HSlider" parent="Panel/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5
script = ExtResource("4_tjlsm")
bus_name = "Master"

[node name="Label2" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_g8gjm")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_su5yy")
text = "Help"

[node name="tutorial_button" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(190, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("SystemFont_j8ufm")
theme_override_font_sizes/font_size = 21
theme_override_styles/focus = SubResource("StyleBoxEmpty_fcswg")
theme_override_styles/hover = SubResource("StyleBoxFlat_imm1h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_imm1h")
theme_override_styles/normal = SubResource("StyleBoxFlat_aeagg")
text = "Show Tutorial"

[node name="Label3" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_g8gjm")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_ctcbg")
text = "Privacy Policy"

[node name="privacy_button" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("SystemFont_j8ufm")
theme_override_font_sizes/font_size = 21
theme_override_styles/focus = SubResource("StyleBoxEmpty_fcswg")
theme_override_styles/hover = SubResource("StyleBoxFlat_imm1h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_imm1h")
theme_override_styles/normal = SubResource("StyleBoxFlat_aeagg")
text = "View Privacy"

[node name="Label" type="Label" parent="Panel"]
material = SubResource("ShaderMaterial_d377r")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -182.0
offset_right = 262.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.32549)
theme_override_constants/line_spacing = 23
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("2_g8gjm")
theme_override_font_sizes/font_size = 70
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 120.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxEmpty_ve1rr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0oc8r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_iyqck")
theme_override_styles/normal = SubResource("StyleBoxEmpty_g5qof")
icon = ExtResource("4_qttmc")
script = ExtResource("1_455bt")

[connection signal="value_changed" from="Panel/GridContainer/Slider" to="Panel/GridContainer/Slider" method="_on_value_changed"]
[connection signal="pressed" from="Panel/GridContainer/tutorial_button" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="Panel/GridContainer/privacy_button" to="." method="_on_privacy_button_pressed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_to_menu_button_pressed"]
